# micro-ROS-Agent

./: .gitignore  3rd-party-licenses.txt  CMakeLists.txt  NOTICE  README.md  micro_ros_agent-extras.cmake.in  package.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  snap.yaml
cmake/: micrortps_agent_xml_generator.cmake
micro-ROS_Agent/: CMakeLists.txt  package.xml
micro-ROS_Agent/resource/: StaticValues.xml  rclcpp.xml
micro_ros_agent/: CHANGELOG.rst  CMakeLists.txt  __init__.py  package.xml
micro_ros_agent/cmake/: SuperBuild.cmake
micro_ros_agent/include/agent/: Agent.hpp
micro_ros_agent/include/agent/graph_manager/: graph_manager.hpp  graph_participants_typesupport.hpp  graph_typesupport.hpp
micro_ros_agent/include/agent/utils/: demangle.hpp
micro_ros_agent/launch/: micro_ros_agent_launch.py
micro_ros_agent/micro_ros_agent/: __init__.py
micro_ros_agent/src/: graph_manager.hpp  main.cpp
micro_ros_agent/src/agent/: Agent.cpp
micro_ros_agent/src/agent/graph_manager/: graph_manager.cpp  graph_participants_typesupport.cpp  graph_typesupport.cpp
micro_ros_agent/src/agent/utils/: demangle.cpp
micro_ros_agent/utils/: __init__.py
micro_ros_agent_msgs/: CMakeLists.txt  package.xml
micro_ros_msgs/: CMakeLists.txt  package.xml
micro_ros_msgs/msg/: Entity.msg  Graph.msg  Node.msg
microxrcedds_agent_cmake_module/: CHANGELOG.rst  CMakeLists.txt  microxrcedds_agent_cmake_module-extras.cmake  package.xml
microxrcedds_agent_cmake_module/cmake/Modules/: FindMicroXRCEDDS_Agent.cmake
snap/: snapcraft.yaml
snap/hooks/: configure
snap/local/: fastdds_no_shared_memory.xml  micro-ros-agent-daemon  micro_ros_agent_colcon.pkg
uROS_Agent/: CMakeLists.txt  README.md  package.xml
uROS_Agent/resource/: StaticValues.xml
uROS_Agent/src/: main.cpp
uROS_Agent/uros_agent/: __init__.py
