<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro-ros-agent</name>
  <version>0.0.1</version>
  <description>DDS-XCRE agent implementation </description>
  <maintainer email="javiermoreno@eprosima.com">Javier Moreno</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>
  
  <depend>fastcdr</depend>
  <depend>fastrtps</depend>
  <depend>micrortps_agent</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
