<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro_ros_agent</name>
  <version>0.0.1</version>
  <description>DDS-XCRE agent implementation </description>
  <maintainer email="javiermoreno@eprosima.com">Javier Moreno</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>
  <buildtool_depend>rosidl_generator_c</buildtool_depend>
  <buildtool_depend>rosidl_generator_dds_idl</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_dds_idl</buildtool_export_depend> 

  <build_export_depend>rmw</build_export_depend>

  <exec_depend>rosidl_parser</exec_depend>
  <exec_depend>rosidl_typesupport_interface</exec_depend>

  <depend>fastcdr</depend>
  <depend>fastrtps</depend>
  <depend>micrortps_agent</depend>



  <exec_depend>rosidl_parser</exec_depend>
  <exec_depend>rosidl_typesupport_interface</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_typesupport_c_packages</member_of_group>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>




