<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro_ros_agent</name>
  <version>0.0.1</version>
  <description>DDS-XCRE agent implementation </description>
  <maintainer email="borjaouterelo@eprosima.com">Borja Outerelo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_export_depend>ament_cmake</buildtool_export_depend>

  <depend>microxrcedds_agent</depend>
  <depend>rosidl_cmake</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>




