<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro_ros_agent</name>
  <version>1.5.4</version>
  <description>micro-ROS Agent package</description>
  <maintainer email="pablogarrido@eprosima.com">Pablo Garrido</maintainer>
  <maintainer email="antoniocuadros@eprosima.com">Antonio Cuadros</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>rosidl_default_generators</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rmw</depend>
  <depend>rcutils</depend>
  <depend>rmw_fastrtps_shared_cpp</depend>
  <depend>rmw_dds_common</depend>
  <depend>micro_ros_msgs</depend>

  <test_depend>rosidl_typesupport_fastrtps_cpp</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>builtin_interfaces</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>




